Bug fix: Save button flickers on entity select
Making `EntitySheet` handle only responsible for proper forms (forms which both entity type and data are available) simplified its behavior. Now its parent is responsible for selecting the appropriate component when either type or data is missing / not selected.

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
 .sider {
   height: 100vh;
 }
+
+.emptyLayout {
+  justify-content: center;
+}
