--- a/src/entity/EntitySheet.css
+++ b/src/entity/EntitySheet.css
@@ -2,10 +2,6 @@
   padding: 1em;
 }
 
-.emptyLayout {
-  justify-content: center;
-}
-
 .fields {
   display: flex;
   flex-direction: row;
